Reapply "Fix loading spinner spacing on child issues and epics"
This reverts commit 23928e64d9db3c9636b301f07770cce248384562 and
reintroduces https://gitlab.com/gitlab-org/gitlab/-/merge_requests/154467

--- a/ee/app/assets/stylesheets/components/related_items_tree.scss
+++ b/ee/app/assets/stylesheets/components/related_items_tree.scss
@@ -30,27 +30,9 @@
     .item-meta {
       line-height: $gl-line-height-18;
     }
-
-    .btn-tree-item-chevron {
-      margin-bottom: $gl-padding-4;
-      margin-right: $gl-padding-4;
-      padding: $gl-padding-8 0;
-      line-height: 0;
-      color: $gl-text-color;
-
-      &:hover {
-        border-color: $border-color;
-        background-color: $border-color;
-      }
-    }
-
+    
     .tree-item-noexpand {
       margin-left: $gl-sidebar-padding - 2;
-    }
-
-    .loading-icon {
-      margin-left: $gl-padding-4 / 2;
-      margin-right: $gl-padding-4;
     }
   }
 }
